Fix bug #44487 (call_user_method_array issues a warning when throwing an exception).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@255530 c90b9560-bf6c-de11-be94-00142212c4b1